<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="pes.gogreenapp.Fragments.RewardsList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <HorizontalScrollView
            android:id="@+id/FiltersAndOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/showAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Todos"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/showCategoriesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Categorias"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/showRedeemablesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/showAllButton"
                    android:text="Canjeables"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/orderPointsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PUNTOS"
                    android:textAllCaps="true" />

                <Button
                    android:id="@+id/orderDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FECHA ↓"
                    android:textAllCaps="true" />

            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/FiltersAndOrders">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FiltersAndOrders"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>
</RelativeLayout>

