<resources>
    <string name="app_name">GoGreen</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="rewards">Rewards</string>
    <string name="user_profile">Perfil</string>
    <string name="settings">Cambiar Contraseña</string>
    <string name="about_us">About Us</string>
    <string name="account_manager">Account Manager</string>

    <!-- Temporal hello world -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points_order_button">PUNTOS</string>

    <!-- Reward List Buttons -->
    <string name="date_ascendant_order_button">FECHA ↑</string>
    <string name="date_descendent_order_button">FECHA ↓</string>
    <string name="date_order_button">FECHA</string>
    <string name="points_ascendent_order_button">PUNTOS ↑</string>
    <string name="points_descendent_order_button">PUNTOS ↓</string>
    <string name="log_out">Log Out</string>
    <string name="profile_image_description">Profile image of the user</string>
    <string name="categories">Categorias</string>

    <!-- Alert Dialog Messages -->
    <string name="givePoints">¿Está seguro que desea entregar los puntos a esos usuarios?</string>
    <string name="switchModeGive">¿Está seguro que desea cambiar el modo de entregar puntos?
        Se perderán los datos introducidos</string>

    <!-- Alert Dialog Buttons -->
    <string name="exchange">CANJEAR</string>
    <string name="givePointsAlertButton">ENTREGAR PUNTOS</string>
    <string name="accept">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="arrow_switch_down">Arrow to activate Switch Menu</string>
    <string name="add_account">Añadir Cuenta</string>
    <string name="shop">Tienda</string>
    <string name="give_points">Dar Puntos</string>
    <string name="titulo">Titulo:</string>
    <string name="tituloCreateEvent">Titulo</string>
    <string name="titulo_del_evento">Título del evento</string>
    <string name="description">Descripción</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="points">Puntos</string>
    <string name="direction">Dirección</string>
    <string name="direccion_del_evento">Dirección del evento</string>
    <string name="date">Fecha</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="guardar">Guardar</string>
    <string name="fecha_del_evento_description">Fecha del evento</string>
    <string name="fecha_evento">Fecha</string>
    <string name="hora_evento">Hora</string>
    <string name="hora_del_evento">Hora del evento</string>
    <string name="empresa_del_evento">Empresa del evento</string>
    <string name="company">Empresa</string>
    <string name="TwoPoints">:</string>
    <string name="Imagen">Imagen</string>
    <string name="imagen_del_evento">Imagen del evento</string>
    <string name="crear_eventos">Crear eventos</string>
    <string name="eventos">Eventos</string>
    <string name="categoria">Categoria</string>
    <string name="ordenar_por_fecha">Ordenar por fecha</string>
    <string name="ordenar_por_puntos">Ordenar por puntos</string>
    <string name="todos">Todos</string>
    <string name="fitrar_por_categoria">Fitrar por categoria</string>
    <string name="editar_evento">Editar evento</string>
    <string name="create_event">Crear Evento</string>
    <string name="new_deal">Nueva Oferta</string>
    <string name="employee_manager">Gestor Empleados</string>
    <string name="delete">Eliminar</string>

    <!-- Hints Give Points -->
    <string name="usernameHint">Nombre de usuario</string>
    <string name="pointsHint">Puntos</string>

    <!-- Switch Give Points -->
    <string name="eventsSwitch">Eventos</string>
    <string name="pointsSwitch">Puntos</string>

    <!-- Buttons Give Points -->
    <string name="anotherUser">+ Otro Usuario</string>
    <string name="grantPoints">Conceder Puntos</string>
    <string name="ofertas">Ofertas</string>
    <string name="TituloCreateOferta">Titulo</string>
    <string name="descuento">Descuento</string>
    <string name="hora_del_evento_description">Hora de la oferta</string>
    <string name="fecha_de_la_oferta">Fecha de la oferta</string>
    <string name="crear_oferta">Crear Oferta</string>
    <string name="imagen_de_la_oferta">imagen de la oferta</string>
    <string name="ir_a_la_tienda">IR A LA TIENDA</string>
    <string name="favoritos">Favoritos</string>
    <string name="atras">Atras</string>
    <string name="añadir_a_favoritos">Añadir a favoritos</string>
    <string name="description_delete_button_employee">Image button to delete the employee</string>
    <string name="hint_employee_email">Email del empleado</string>
    <string name="hint_employee_username">Username del empleado</string>
    <string name="hint_password_employee">Contraseña para el empleado</string>
    <string name="button_add">Añadir</string>
    <string name="add_employee">Añadir Empleado</string>
    <string name="button_for_close_the_dialog">Button for close the dialog</string>
    <string name="all">All</string>
    <string name="canjeables">Canjeables</string>
    <string name="order_by">Ordernar por:</string>
    <string name="filter_by">Filtrar por:</string>
    <string name="ascendent">Ascendente</string>
    <string name="descendent">Descendente</string>

    <!-- Others -->
    <string name="advert">ESTE QR ES SOLO VÁLIDO PARA UN USO. DESPUÉS DE ESCANEARLO DESAPARECERÁ DE
        TUS REWARDS CANJEADAS Y NO PODRÁS VOLVER A USARLO.</string>
    <string name="img_description_about_us">Logo de la aplicacion para el About Us</string>
    <string name="version_about_us">Versión 1.1 (101.17)</string>
    <string name="copyright_about_us">Copyright © 2017 GoGreen Develop.</string>
    <string name="all_rights_reserved">Todos los derechos reservados</string>


</resources>
