...
        <ImageView
            android:id="@+id/rewardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rewardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/rewardPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rewardTitle" />

        <TextView
            android:id="@+id/rewardCategory"
...
