...
    <group
        android:id="@+id/menu_switch"
        android:checkableBehavior="single">
        <item
            android:id="@+id/add_account"
            android:icon="@drawable/ic_add_black_24dp"
            android:orderInCategory="100"
            android:title="@string/add_account" />
    </group>
    <!-- This group represents the items fixed in every Role -->
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
...
        <item
            android:id="@+id/about_us_fragment"
            android:icon="@mipmap/ic_info_black_24dp"
            android:orderInCategory="103"
            android:title="@string/about_us" />
        <item
            android:id="@+id/log_out"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:orderInCategory="104"
            android:title="@string/log_out" />
    </group>
</menu>
