...
            android:layout_alignParentTop="true"
            android:background="@null"
            app:srcCompat="@mipmap/ic_back_white"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/TitleLogIn"
            fontPath="fonts/Raleway-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
...
            android:layout_below="@+id/TitleLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:src="@mipmap/ic_launcher_round"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageGoGreen"
            android:layout_marginTop="82dp"
            android:focusable="true"
...
            android:hint="Nombre de usuario o email"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro"/>

        <EditText
            android:id="@+id/password_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/username_edit_text"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/username_edit_text"
            android:ems="10"
...
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro"/>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonregisterloginshape"
            android:text="login"
            android:layout_alignParentBottom="true"
...
